improved page insights

--- a/blogs.html
+++ b/blogs.html
@@ -54,19 +54,19 @@
     </script>
     <script src="js/scroll.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="./img/Pranjay4.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> -->
     <link rel="icon" href="./img/Pranjay4.png" type="image/icon type">
     <!-- <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.2/umd/popper.min.js"></script>
-    <link rel="stylesheet" href="css/all.min.css">
+    <!-- <link rel="stylesheet" href="css/all.min.css"> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/venobox.css">
 
-    <link rel="stylesheet" type="text/css" href="css/brands.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/brands.css"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/scoll.css">
     <!------------------------------------------------------Bot start---------------------------------------------------->
@@ -168,7 +168,7 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-blogs">
                         <div class="portfolio-wrap">
-                            <img src="blogs images/blog1.png" class="img-fluid" alt="blog image">
+                            <img loading="lazy" src="blogs images/blog1.png" class="img-fluid" alt="blog image">
                             <div class="portfolio-info">
                                 <h4>The transition from Graphic Design to UI/UX Design</h4>
                                 <p>A blog written by me, which is published in DATAX Journal and in IWSCSRM</p>
@@ -182,7 +182,7 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-blogs">
                         <div class="portfolio-wrap">
-                            <img src="blogs images/typescript.png" class="img-fluid" alt="blog image">
+                            <img loading="lazy" src="blogs images/typescript.png" class="img-fluid" alt="blog image">
                             <div class="portfolio-info">
                                 <h4>Property has no initializer and is not definitely assigned</h4>
                                 <p>A quick fix for the most frequent error faced by Angular Developers</p>
@@ -196,7 +196,7 @@
                     <!-- ------------------------ white papers ------------------------------------------------------->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-white">
                         <div class="portfolio-wrap">
-                            <img src="blogs images/underdev.png" class="img-fluid" alt="white paper image">
+                            <img loading="lazy" src="blogs images/underdev.png" class="img-fluid" alt="white paper image">
                             <div class="portfolio-info">
                                 <h4>White Paper Coming Soon</h4>
                                 <p></p>
@@ -335,12 +335,13 @@
             });
         </script>
         <!-------------------------------------END ANIMATION SCRIPTS-------------->
-        <!-- firebase-----start------>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="/__/firebase/8.2.10/firebase-app.js"></script>
+        <script src="/__/firebase/8.10.1/firebase-app.js"></script>
+
         <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="/__/firebase/8.2.10/firebase-analytics.js"></script>
+https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="/__/firebase/8.10.1/firebase-analytics.js"></script>
+
         <!-- Initialize Firebase -->
         <script src="/__/firebase/init.js"></script>
         <audio id="myAudio">
