--- a/projects.html
+++ b/projects.html
@@ -55,18 +55,18 @@
     </script>
     <script src="js/scroll.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="./img/Pranjay4.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> -->
     <link rel="icon" href="./img/Pranjay4.png" type="image/icon type">
     <!-- <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.2/umd/popper.min.js"></script>
-    <link rel="stylesheet" href="css/all.min.css">
+    <!-- <link rel="stylesheet" href="css/all.min.css"> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/venobox.css">
-    <link rel="stylesheet" type="text/css" href="css/brands.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/brands.css"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/scoll.css">
     <!------------------------------------------------------Bot start---------------------------------------------------->
@@ -174,7 +174,7 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/swasthify.png" class="img-fluid" alt="Swasthify WebApp">
+                            <img loading="lazy" src="projects images/swasthify.png" class="img-fluid" alt="Swasthify WebApp">
                             <div class="portfolio-info">
                                 <h4>Swasthify</h4>
                                 <p> </p>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/Shopify.png" class="img-fluid" alt="Shopify WebApp">
+                            <img loading="lazy" src="projects images/Shopify.png" class="img-fluid" alt="Shopify WebApp">
                             <div class="portfolio-info">
                                 <h4>Shopify</h4>
                                 <p> </p>
@@ -200,7 +200,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/covinex.png" class="img-fluid" alt="Covinex Covid testing WebApp">
+                            <img loading="lazy" src="projects images/covinex.png" class="img-fluid" alt="Covinex Covid testing WebApp">
                             <div class="portfolio-info">
                                 <h4>Covinex</h4>
                                 <p> </p>
@@ -214,7 +214,7 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/iwsc.png" class="img-fluid" alt="iwsc logo">
+                            <img loading="lazy" src="projects images/iwsc.png" class="img-fluid" alt="iwsc logo">
                             <div class="portfolio-info">
                                 <h4>IWSC Student Chapter Portal</h4>
                                 <p> </p>
@@ -227,7 +227,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/IWSC-recruitments.png" class="img-fluid" alt="iwsc logo">
+                            <img loading="lazy" src="projects images/IWSC-recruitments.png" class="img-fluid" alt="iwsc logo">
                             <div class="portfolio-info">
                                 <h4>IWSC Recruitments Portal</h4>
                                 <p> </p>
@@ -240,7 +240,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/employee_management.png" class="img-fluid" alt="Employee Management System">
+                            <img loading="lazy" src="projects images/employee_management.png" class="img-fluid" alt="Employee Management System">
                             <div class="portfolio-info">
                                 <h4>Employee Management System</h4>
                                 <p> </p>
@@ -253,7 +253,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/srm.png" class="img-fluid" alt="SRM UNIVERSITY Redesigned Website">
+                            <img loading="lazy" src="projects images/srm.png" class="img-fluid" alt="SRM UNIVERSITY Redesigned Website">
                             <div class="portfolio-info">
                                 <h4>SRM UNIVERSITY Redesigned Website</h4>
                                 <p> </p>
@@ -266,7 +266,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/todo.png" class="img-fluid" alt="Todo list app logo">
+                            <img loading="lazy" src="projects images/todo.png" class="img-fluid" alt="Todo list app logo">
                             <div class="portfolio-info">
                                 <h4>To-Do List App</h4>
                                 <p> </p>
@@ -279,7 +279,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/redsands.png" class="img-fluid" alt="Red Sands logo">
+                            <img loading="lazy" src="projects images/redsands.png" class="img-fluid" alt="Red Sands logo">
                             <div class="portfolio-info">
                                 <h4>Red Sands Restaurant</h4>
                                 <p> </p>
@@ -293,7 +293,7 @@
                     <!-- web projects  ml -->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/cato.png" class="img-fluid" alt="catalytic originals image">
+                            <img loading="lazy" src="projects images/cato.png" class="img-fluid" alt="catalytic originals image">
                             <div class="portfolio-info">
                                 <h4>Catalytic Originals Website</h4>
                                 <p></p>
@@ -306,7 +306,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/webarchforms.png" class="img-fluid" alt="Webarch Forms">
+                            <img loading="lazy" src="projects images/webarchforms.png" class="img-fluid" alt="Webarch Forms">
                             <div class="portfolio-info">
                                 <h4>Webarch Forms</h4>
                                 <p></p>
@@ -319,7 +319,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/google.png" class="img-fluid" alt=" google image">
+                            <img loading="lazy" src="projects images/google.png" class="img-fluid" alt=" google image">
                             <div class="portfolio-info">
                                 <h4>Google Clone Website</h4>
                                 <p></p>
@@ -332,7 +332,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/Preksha.png" class="img-fluid" alt="Preksha logo image">
+                            <img loading="lazy" src="projects images/Preksha.png" class="img-fluid" alt="Preksha logo image">
                             <div class="portfolio-info">
                                 <h4>Preksha Website</h4>
                                 <p>In Web Hackathon</p>
@@ -345,7 +345,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/pranjay.png" class="img-fluid" alt="Portfolio Pranjay image">
+                            <img loading="lazy" src="projects images/pranjay.png" class="img-fluid" alt="Portfolio Pranjay image">
                             <div class="portfolio-info">
                                 <h4>Portfolio Website</h4>
                                 <p>Pranjay Poddar</p>
@@ -358,7 +358,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/artdreamation.png" class="img-fluid" alt="Artdreamation image">
+                            <img loading="lazy" src="projects images/artdreamation.png" class="img-fluid" alt="Artdreamation image">
                             <div class="portfolio-info">
                                 <h4>Artdreamation Ecommerce Website</h4>
                                 <p></p>
@@ -371,7 +371,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/anurag.png" class="img-fluid" alt="Portfolio Anurag image">
+                            <img loading="lazy" src="projects images/anurag.png" class="img-fluid" alt="Portfolio Anurag image">
                             <div class="portfolio-info">
                                 <h4>Portfolio Website</h4>
                                 <p>Anurag Bajoria</p>
@@ -384,7 +384,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/confusion.png" class="img-fluid" alt="Confusion Restaurant image">
+                            <img loading="lazy" src="projects images/confusion.png" class="img-fluid" alt="Confusion Restaurant image">
                             <div class="portfolio-info">
                                 <h4>Confusion Restaurant Website</h4>
                                 <p></p>
@@ -397,7 +397,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/hangman.png" class="img-fluid" alt="Hangman Game">
+                            <img loading="lazy" src="projects images/hangman.png" class="img-fluid" alt="Hangman Game">
                             <div class="portfolio-info">
                                 <h4>Hangman Game</h4>
                                 <p></p>
@@ -410,7 +410,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/tic-tac-toe.png" class="img-fluid" alt="Tic-Tac-Toe Game">
+                            <img loading="lazy" src="projects images/tic-tac-toe.png" class="img-fluid" alt="Tic-Tac-Toe Game">
                             <div class="portfolio-info">
                                 <h4>Tic-Tac-Toe Game</h4>
                                 <p></p>
@@ -423,7 +423,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="projects images/daa.png" class="img-fluid" alt="daa website">
+                            <img loading="lazy" src="projects images/daa.png" class="img-fluid" alt="daa website">
                             <div class="portfolio-info">
                                 <h4>Directorate Of Allumni Affairs Official Website</h4>
                                 <p></p>
@@ -437,7 +437,7 @@
                     <!-- c/c++ projects  -->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-c">
                         <div class="portfolio-wrap">
-                            <img src="projects images/rube.png" class="img-fluid" alt="Rube goldberg machine image">
+                            <img loading="lazy" src="projects images/rube.png" class="img-fluid" alt="Rube goldberg machine image">
                             <div class="portfolio-info">
                                 <h4>Virtual Rube Goldberg Machine</h4>
                                 <p> </p>
@@ -450,7 +450,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-c">
                         <div class="portfolio-wrap">
-                            <img src="projects images/LexicalAnalyzer.png" class="img-fluid" alt="Building a lexical analyser using Lex for a subset of C language to tokenise a given program">
+                            <img loading="lazy" src="projects images/LexicalAnalyzer.png" class="img-fluid" alt="Building a lexical analyser using Lex for a subset of C language to tokenise a given program">
                             <div class="portfolio-info">
                                 <h4>Lexical Analyzer</h4>
                                 <p> </p>
@@ -465,7 +465,7 @@
                     <!-- python projects  -->
                     <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-python">
                 <div class="portfolio-wrap">
-                    <img src="projects images/development.png" class="img-fluid" alt="project coming soon image">
+                    <img loading="lazy" src="projects images/development.png" class="img-fluid" alt="project coming soon image">
                     <div class="portfolio-info">
                         <h4>Project Coming Soon</h4>
                         <p></p>
@@ -479,7 +479,7 @@
                     <!-- javascript projects eda  -->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-react">
                         <div class="portfolio-wrap">
-                            <img src="projects images/cms.png" class="img-fluid" alt="College Made Simpler logo">
+                            <img loading="lazy" src="projects images/cms.png" class="img-fluid" alt="College Made Simpler logo">
                             <div class="portfolio-info">
                                 <h4>College Made Simpler </h4>
                                 <p></p>
@@ -492,7 +492,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-react">
                         <div class="portfolio-wrap">
-                            <img src="projects images/webarch.png" class="img-fluid" alt="Webarch Official Website logo">
+                            <img loading="lazy" src="projects images/webarch.png" class="img-fluid" alt="Webarch Official Website logo">
                             <div class="portfolio-info">
                                 <h4>Webarch Official Website</h4>
                                 <p></p>
@@ -505,7 +505,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-os">
                         <div class="portfolio-wrap">
-                            <img src="projects images/devgeeks.png" class="img-fluid" alt="Dev Geeks Website logo">
+                            <img loading="lazy" src="projects images/devgeeks.png" class="img-fluid" alt="Dev Geeks Website logo">
                             <div class="portfolio-info">
                                 <h4>Dev Geeks</h4>
                                 <p></p>
@@ -518,7 +518,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-os">
                         <div class="portfolio-wrap">
-                            <img src="projects images/dsalgo.png" class="img-fluid" alt="Data Structures and Algorithms Website logo">
+                            <img loading="lazy" src="projects images/dsalgo.png" class="img-fluid" alt="Data Structures and Algorithms Website logo">
                             <div class="portfolio-info">
                                 <h4>Data Structures and Algorithms</h4>
                                 <p></p>
@@ -531,7 +531,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-react">
                         <div class="portfolio-wrap">
-                            <img src="projects images/development.png" class="img-fluid" alt="project coming soon image">
+                            <img loading="lazy" src="projects images/development.png" class="img-fluid" alt="project coming soon image">
                             <div class="portfolio-info">
                                 <h4>Project Coming Soon</h4>
                                 <p></p>
@@ -670,11 +670,11 @@
         <!-------------------------------------END ANIMATION SCRIPTS-------------->
         <!-- firebase-----start------>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="/__/firebase/8.2.10/firebase-app.js"></script>
+        <script src="/__/firebase/8.10.1/firebase-app.js"></script>
 
         <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="/__/firebase/8.2.10/firebase-analytics.js"></script>
+        <script src="/__/firebase/8.10.1/firebase-analytics.js"></script>
 
         <!-- Initialize Firebase -->
         <script src="/__/firebase/init.js"></script>
