--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,6 @@
                     strings: [' Full Stack Developer',
                         'Competetive Programmer',
                         'Graphic Designer',
-                        'DS & Algo Geek ',
                         'Cloud Computing Enthusiast',
                     ],
                     typeSpeed: 60,
@@ -400,7 +399,7 @@
                                     <p class="experience-item">Graphic Design Intern</p>
                                     <h5>April,2021-May,2021</h5>
                                     <br>
-                                    <img src="./img/inception_wave.png" height="100px" width="100px">
+                                    <a href="https://www.linkedin.com/company/inception-wave-student-chapter/mycompany/"><img src="./img/inception_wave.png" class="grow" height="100px" width="100px"></a>
                                 </div>
                             </div>
                         </div>
@@ -428,7 +427,7 @@
                         <p>Working with IWSC SRM as a front-end web developer.</p>
                     </div>
                     <div class="experience-item">
-                        <h4>Front-end Developer and Graphic Designer</h4>
+                        <h4>Secretary</h4>
                         <h5>Feb,2020-Present</h5>
                         <p><i class="fas fa-caret-right"></i>WEBARCH CLUB SRM</p>
                         <p>Working with Webarch Club as a Web developer and Graphic Designer.</p>
