--- a/public/projects.html
+++ b/public/projects.html
@@ -448,6 +448,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-c">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/LexicalAnalyzer.png" class="img-fluid" alt="Building a lexical analyser using Lex for a subset of C language to tokenise a given program">
+                            <div class="portfolio-info">
+                                <h4>Lexical Analyzer</h4>
+                                <p> </p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/LexicalAnalyzer.png" data-gall="portfolioGallery" title="Building a lexical analyser using Lex for a subset of C language to tokenise a given program " class="venobox"><i class="fas fa-images"></i></a>
+                                    <a href="https://github.com/pranjay-poddar/lexical-analyser-using-Lex" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <!-- python projects  -->
                     <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-python">
