updated publications and internships

--- a/blogs.html
+++ b/blogs.html
@@ -10,8 +10,7 @@
     <meta name="author" content="Pranjay Poddar" />
     <meta property="og:url" content="https://pranjay-portfolio.web.app/" />
     <meta property="og:title" content="Portfolio-Pranjay Poddar" />
-    <meta property="og:description" content="BTECH InCSE With Specialisation In Cloud Computing" />
-    <meta property="og:image" content="https://billboard.srmkzilla.net/api/blog?title=Portfolio-Blogs&subtitle=Pranjay%20Poddar%20-2021&theme=dark" />
+    <meta property="og:description" content="Software Developer, BTECH In CSE With Specialisation In Cloud Computing" />
 
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="apple-touch-icon" sizes="57x57" href="./apple touch/57.png">
@@ -129,7 +128,7 @@
                                 <li class="nav-item"><a class="nav-link" href="./index.html#about">About</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#experience">Experience</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./projects.html">Projects</a></li>
-                                <li class="nav-item active" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./blogs.html">Blogs</a></li>
+                                <li class="nav-item active" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./blogs.html">Publications</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#contact">Contact</a></li>
                             </ul>
                         </div>
@@ -153,19 +152,32 @@
         <section id="blogs" class="projects">
             <div class="container">
                 <div class="section-title">
-                    <h2>Blogs & White Papers</h2>
+                    <h2>Publications</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-filters">
                             <li data-filter="*" class="filter-active">All</li>
+                            <li data-filter=".filter-research">Research Papers</li>
                             <li data-filter=".filter-blogs">Blogs</li>
                             <li data-filter=".filter-white">White Papers</li>
                         </ul>
                     </div>
                 </div>
                 <div class="row portfolio-container">
-
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-research">
+                        <div class="portfolio-wrap">
+                            <img loading="lazy" src="blogs images/research.png" class="img-fluid" alt="research paper image">
+                            <div class="portfolio-info">
+                                <h4>Network Function Virtualization in the Multi-Tenant Cloud</h4>
+                                <p>Research paper which is published in JUSST, Journal of University of Shanghai for Science and Technology </p>
+                                <div class="portfolio-links">
+                                    <a href="blogs images/research.png" data-gall="portfolioGallery" class="venobox" title="Blog"><i class="fas fa-images"></i></a>
+                                    <a href="https://jusst.org/network-function-virtualization-in-the-multi-tenant-cloud/" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-blogs">
                         <div class="portfolio-wrap">
                             <img loading="lazy" src="blogs images/blog1.png" class="img-fluid" alt="blog image">
