--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,7 @@
     <meta name="author" content="Pranjay Poddar" />
     <meta property="og:url" content="https://pranjay-portfolio.web.app/" />
     <meta property="og:title" content="Portfolio-Pranjay Poddar" />
-    <meta property="og:description" content="BTECH InCSE With Specialisation In Cloud Computing" />
-    <meta property="og:image" content="https://billboard.srmkzilla.net/api/blog?title=Portfolio-Projects&subtitle=Pranjay%20Poddar%20-2021&theme=dark" />
+    <meta property="og:description" content="Software Developer,BTECH In CSE With Specialisation In Cloud Computing" />
 
     <link rel="manifest" href="./manifest.webmanifest">
 
@@ -130,7 +129,7 @@
                                 <li class="nav-item"><a class="nav-link" href="./index.html#about">About</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#experience">Experience</a></li>
                                 <li class="nav-item active" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./projects.html">Projects</a></li>
-                                <li class="nav-item"><a class="nav-link" href="./blogs.html">Blogs</a></li>
+                                <li class="nav-item"><a class="nav-link" href="./blogs.html">Publications</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#contact">Contact</a></li>
                             </ul>
                         </div>
