--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
     <meta name="author" content="Pranjay Poddar" />
     <meta property="og:url" content="https://pranjay-portfolio.web.app/" />
     <meta property="og:title" content="Portfolio-Pranjay Poddar" />
-    <meta property="og:description" content="BTECH InCSE With Specialisation In Cloud Computing" />
-    <meta property="og:image" content="https://billboard.srmkzilla.net/api/blog?title=Portfolio&subtitle=Pranjay%20Poddar%20-2021&theme=dark" />
+    <meta property="og:description" content="Software Developer, BTECH In CSE With Specialisation In Cloud Computing" />
 
     <link rel="manifest" href="./manifest.webmanifest">
 
@@ -45,15 +44,15 @@
     </script>
     <script src="js/scroll.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="./img/Pranjay4.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> -->
     <link rel="icon" href="./img/Pranjay4.png" type="image/icon type">
     <!-- <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.2/umd/popper.min.js"></script>
-    <link rel="stylesheet" href="css/all.min.css">
+    <!-- <link rel="stylesheet" href="css/all.min.css"> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/venobox.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -133,7 +132,7 @@
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="#about">About</a></li>
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="#experience">Experience</a></li>
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./projects.html">Projects</a></li>
-                                <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./blogs.html">Blogs</a></li>
+                                <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./blogs.html">Publications</a></li>
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" target="_blank" href="https://pranjay-graphics.netlify.app/">Graphics</a></li>
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="#contact">Contact</a></li>
                             </ul>
@@ -379,18 +378,28 @@
                     <div class="col-lg-12">
                         <h3 class='experience-title text-center'>Internship Experience</h3>
                         <div class="row">
-                            <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                            <div class="col-lg-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                                <div class="experience-item">
+                                    <h4>PayPal</h4>
+                                    <p>SDE-1 Intern</p>
+                                    <br>
+                                    <h5>July-Present</h5>
+                                    <br>
+                                    <img loading="lazy" src="./img/paypal.png" height="130px" width="250px" style="margin-bottom: 10%;">
+                                </div>
+                            </div>
+                            <div class="col-lg-4" data-aos="fade-up" data-aos-duration="1200" data-aos-easing="ease-in-out">
                                 <div class="experience-item">
                                     <h4>Highradius Winter Intern</h4>
                                     <p>Highway to Highradius Tech Track</p>
                                     <br>
                                     <h5>February,2022-Present</h5>
                                     <br>
-                                    <img src="./img/high-radius.png" height="70px" width="250px" style="margin-bottom: 10%;">
+                                    <img loading="lazy" src="./img/high-radius.png" height="70px" width="250px" style="margin-bottom: 10%;">
                                 </div>
                             </div>
 
-                            <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                            <div class="col-lg-4" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
                                 <div class="experience-item">
                                     <h4>Inception Wave Pvt. Ltd</h4>
                                     <p>Full Stack Development Intern</p>
@@ -399,7 +408,7 @@
                                     <p class="experience-item">Graphic Design Intern</p>
                                     <h5>April,2021-May,2021</h5>
                                     <br>
-                                    <a href="https://www.linkedin.com/company/inception-wave-student-chapter/mycompany/"><img src="./img/inception_wave.png" class="grow" height="100px" width="100px"></a>
+                                    <a href="https://www.linkedin.com/company/inception-wave-student-chapter/mycompany/"><img loading="lazy" src="./img/inception_wave.png" class="grow" height="100px" width="100px"></a>
                                 </div>
                             </div>
                         </div>
@@ -504,7 +513,7 @@
 
                 </div>
                 <div class="col-lg-6 text-center align-middle" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <img class="grow text-center " style="margin-top: 10%;" src="./img/open-source.svg">
+                    <img loading="lazy" class="grow text-center " style="margin-top: 10%;" src="./img/open-source.svg">
                 </div>
             </div>
         </div>
@@ -512,19 +521,19 @@
         <div classs="container-fluid ">
             <div class="row text-center cat">
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <a href="./projects.html"><img class="project-blog grow" src="./img/projects.png"></a>
+                    <a href="./projects.html"><img loading="lazy" class="project-blog grow" src="./img/projects.png"></a>
                     <a href="./projects.html">
                         <h3 class="project-blog-headings">Projects</h3>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <a href="./blogs.html"><img class="project-blog grow" src="./img/blogs.png"></a>
+                    <a href="./blogs.html"><img loading="lazy" class="project-blog grow" src="./img/blogs.png"></a>
                     <a href="./blogs.html">
                         <h3 class="project-blog-headings">Blogs</h3>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <a href="https://pranjay-graphics.netlify.app/" target="_blank"><img class="project-blog grow" src="./img/graphics.png"></a>
+                    <a href="https://pranjay-graphics.netlify.app/" target="_blank"><img loading="lazy" class="project-blog grow" src="./img/graphics.png"></a>
                     <a href="https://pranjay-graphics.netlify.app/" target="_blank">
                         <h3 class="project-blog-headings">Graphic Designs</h3>
                     </a>
@@ -739,8 +748,11 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-------------------------------------END ANIMATION SCRIPTS-------------->
     <!-- firebase-----start------>
-    <script src="/__/firebase/8.2.10/firebase-app.js"></script>
-    <script src="/__/firebase/8.2.10/firebase-analytics.js"></script>
+    <script src="/__/firebase/8.10.1/firebase-app.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/8.10.1/firebase-analytics.js"></script>
+    <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
     <audio id="myAudio">
         <source src="./click.mp3" type="audio/ogg">
