--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <meta name="author" content="Pranjay Poddar" />
     <meta property="og:url" content="https://pranjay-portfolio.web.app/" />
     <meta property="og:title" content="Portfolio-Pranjay Poddar" />
-    <meta property="og:description" content="BTECH InCSE With Specialisation In Cloud Computing" />
-    <meta property="og:image" content="https://billboard.srmkzilla.net/api/blog?title=Portfolio&subtitle=Pranjay%20Poddar%20-2021&theme=dark" />
+    <meta property="og:description" content="Software Developer, BTECH In CSE With Specialisation In Cloud Computing" />
 
     <link rel="manifest" href="./manifest.webmanifest">
 
@@ -133,7 +132,7 @@
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="#about">About</a></li>
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="#experience">Experience</a></li>
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./projects.html">Projects</a></li>
-                                <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./blogs.html">Blogs</a></li>
+                                <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./blogs.html">Publications</a></li>
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" target="_blank" href="https://pranjay-graphics.netlify.app/">Graphics</a></li>
                                 <li class="nav-item" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="#contact">Contact</a></li>
                             </ul>
@@ -379,7 +378,17 @@
                     <div class="col-lg-12">
                         <h3 class='experience-title text-center'>Internship Experience</h3>
                         <div class="row">
-                            <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                            <div class="col-lg-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                                <div class="experience-item">
+                                    <h4>PayPal</h4>
+                                    <p>SDE-1 Intern</p>
+                                    <br>
+                                    <h5>July-Present</h5>
+                                    <br>
+                                    <img loading="lazy" src="./img/paypal.png" height="130px" width="250px" style="margin-bottom: 10%;">
+                                </div>
+                            </div>
+                            <div class="col-lg-4" data-aos="fade-up" data-aos-duration="1200" data-aos-easing="ease-in-out">
                                 <div class="experience-item">
                                     <h4>Highradius Winter Intern</h4>
                                     <p>Highway to Highradius Tech Track</p>
@@ -390,7 +399,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                            <div class="col-lg-4" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
                                 <div class="experience-item">
                                     <h4>Inception Wave Pvt. Ltd</h4>
                                     <p>Full Stack Development Intern</p>
