--- a/public/blogs.html
+++ b/public/blogs.html
@@ -10,8 +10,7 @@
     <meta name="author" content="Pranjay Poddar" />
     <meta property="og:url" content="https://pranjay-portfolio.web.app/" />
     <meta property="og:title" content="Portfolio-Pranjay Poddar" />
-    <meta property="og:description" content="BTECH InCSE With Specialisation In Cloud Computing" />
-    <meta property="og:image" content="https://billboard.srmkzilla.net/api/blog?title=Portfolio-Blogs&subtitle=Pranjay%20Poddar%20-2021&theme=dark" />
+    <meta property="og:description" content="Software Developer, BTECH In CSE With Specialisation In Cloud Computing" />
 
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="apple-touch-icon" sizes="57x57" href="./apple touch/57.png">
@@ -54,19 +53,19 @@
     </script>
     <script src="js/scroll.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="./img/Pranjay4.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> -->
     <link rel="icon" href="./img/Pranjay4.png" type="image/icon type">
     <!-- <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.2/umd/popper.min.js"></script>
-    <link rel="stylesheet" href="css/all.min.css">
+    <!-- <link rel="stylesheet" href="css/all.min.css"> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/venobox.css">
 
-    <link rel="stylesheet" type="text/css" href="css/brands.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/brands.css"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/scoll.css">
     <!------------------------------------------------------Bot start---------------------------------------------------->
@@ -129,7 +128,7 @@
                                 <li class="nav-item"><a class="nav-link" href="./index.html#about">About</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#experience">Experience</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./projects.html">Projects</a></li>
-                                <li class="nav-item active" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./blogs.html">Blogs</a></li>
+                                <li class="nav-item active" data-toggle="collapse" data-target="#navbarid"><a class="nav-link" href="./blogs.html">Publications</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#contact">Contact</a></li>
                             </ul>
                         </div>
@@ -153,22 +152,35 @@
         <section id="blogs" class="projects">
             <div class="container">
                 <div class="section-title">
-                    <h2>Blogs & White Papers</h2>
+                    <h2>Publications</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-filters">
                             <li data-filter="*" class="filter-active">All</li>
+                            <li data-filter=".filter-research">Research Papers</li>
                             <li data-filter=".filter-blogs">Blogs</li>
                             <li data-filter=".filter-white">White Papers</li>
                         </ul>
                     </div>
                 </div>
                 <div class="row portfolio-container">
-
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-research">
+                        <div class="portfolio-wrap">
+                            <img loading="lazy" src="blogs images/research.png" class="img-fluid" alt="research paper image">
+                            <div class="portfolio-info">
+                                <h4>Network Function Virtualization in the Multi-Tenant Cloud</h4>
+                                <p>Research paper which is published in JUSST, Journal of University of Shanghai for Science and Technology </p>
+                                <div class="portfolio-links">
+                                    <a href="blogs images/research.png" data-gall="portfolioGallery" class="venobox" title="Blog"><i class="fas fa-images"></i></a>
+                                    <a href="https://jusst.org/network-function-virtualization-in-the-multi-tenant-cloud/" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-blogs">
                         <div class="portfolio-wrap">
-                            <img src="blogs images/blog1.png" class="img-fluid" alt="blog image">
+                            <img loading="lazy" src="blogs images/blog1.png" class="img-fluid" alt="blog image">
                             <div class="portfolio-info">
                                 <h4>The transition from Graphic Design to UI/UX Design</h4>
                                 <p>A blog written by me, which is published in DATAX Journal and in IWSCSRM</p>
@@ -182,7 +194,7 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-blogs">
                         <div class="portfolio-wrap">
-                            <img src="blogs images/typescript.png" class="img-fluid" alt="blog image">
+                            <img loading="lazy" src="blogs images/typescript.png" class="img-fluid" alt="blog image">
                             <div class="portfolio-info">
                                 <h4>Property has no initializer and is not definitely assigned</h4>
                                 <p>A quick fix for the most frequent error faced by Angular Developers</p>
@@ -196,7 +208,7 @@
                     <!-- ------------------------ white papers ------------------------------------------------------->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-white">
                         <div class="portfolio-wrap">
-                            <img src="blogs images/underdev.png" class="img-fluid" alt="white paper image">
+                            <img loading="lazy" src="blogs images/underdev.png" class="img-fluid" alt="white paper image">
                             <div class="portfolio-info">
                                 <h4>White Paper Coming Soon</h4>
                                 <p></p>
@@ -335,12 +347,13 @@
             });
         </script>
         <!-------------------------------------END ANIMATION SCRIPTS-------------->
-        <!-- firebase-----start------>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="/__/firebase/8.2.10/firebase-app.js"></script>
+        <script src="/__/firebase/8.10.1/firebase-app.js"></script>
+
         <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="/__/firebase/8.2.10/firebase-analytics.js"></script>
+https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="/__/firebase/8.10.1/firebase-analytics.js"></script>
+
         <!-- Initialize Firebase -->
         <script src="/__/firebase/init.js"></script>
         <audio id="myAudio">
